# OpticalFlowVideoTracking

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  NOTICE  README.md  compile.sh
.github/workflows/: build.yml  build_and_test.yml  lint.yml  test.yml
cmake/: ClangTidy.cmake
include/: deriv.h  feature_detector.h  image_utils.h  optical_flow.h  vision_types.h
include/video/: stream.h
src/: deriv.cpp  feature_detector.cpp  image_utils.cpp  main.cpp  optical_flow.cpp
src/video/: stream.cpp
tests/: CMakeLists.txt  test_stream.cpp
